Bug 419530 - Search bar content not sent to the search engine
Summary: Search bar content not sent to the search engine
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-02 09:52 UTC by nicolas.friess
Modified: 2023-11-26 22:26 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nicolas.friess 2020-04-02 09:52:20 UTC
SUMMARY


STEPS TO REPRODUCE
1. Type something in the search bar
2. Click on the search icon or hit Enter
3. 

OBSERVED RESULT

The search engine page is called and displayed, but with an empty search field and thus no results.
This happens with Qwant, Bing, StartPage. With Google, DuckDuckGo or Wikipedia, it works fine. I didn't tried other engines.

EXPECTED RESULT

The content typed in the search bar should be sent to the search engine, which should therefore display the results.


SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Kubuntu 18.04, kernel 4.15.0-91 64 bits
(available in About System)
KDE Plasma Version: 5.12.9
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
Comment 1 Juraj 2020-04-03 16:19:12 UTC
Qwant, Bing and so on are not default Falkon search engines.

How did you add those engines ?
Can you post the url for each engine ?
- You can see the url when you go to
> Manage search engine > [Search engine] > Edit
Here you can see Url and for some engine Post data.
In most cases the search string is passed in url.

So, please send the urls for the engine you believe it is not working.
Comment 2 nicolas.friess 2020-04-03 19:57:00 UTC
I've indeed added Qwant. Its url in the menu is
www.qwant.com

The I've added Bing to check if it had the same behaviour. Its url is
www.bing.com

StartPage behaves the same way and I don't remember having added it. Its url is
https://startpage.com/do/search
with "query=%s&cat=web&language=english" in the field just below (named "Données de Post", I guess it should be "Post datas" in english ?)

------------------------------------------------------------------------

In the meantime, an "add Qwant" line appeared in the search menu when I'm on the Qwant page, so I used it and it has been added to the list with a queue to the url :
https://www.qwant.com/?q=%s&client=opensearch
Now it works fine.

The "add" line doesn't show up in the list when I'm on the Bing page
I added "?q=essai&client=opensearch" to the line in the menu and now it works well too.

On the StartPage page, the "add StartPage" appears. It records the url
https://www.startpage.com/do/dsearch?query=%s&cat=web&pl=opensearch&language=francais
but that doesn't work.
I tried to switch it with
https://www.startpage.com/q=%s&client=opensearch
but it doesn't work either.
Comment 3 Juraj 2020-04-03 20:12:52 UTC
> On the StartPage page, the "add StartPage" appears. It records the url
> https://www.startpage.com/do/dsearch?query=%s&cat=web&pl=opensearch&language=francais
> but that doesn't work.

When I try it I get the "same" (apart from language) url and it works just fine.
There should be no post data for this search engine, the url is enough.
The '%s' will be replaced by your search string.

You can also try and add custom search engines by clicking on input field in a form and pressing "Create Search Engine" from context menu.
Comment 4 Jaap 2020-04-04 06:36:17 UTC
I do have same problems adding startpage as a search engine.
Comment 5 Côme Chilliet 2020-05-29 20:33:06 UTC
The same problem exists for searx instances, like https://searx.antopie.org/

It seems it is a problem with the support for https://en.wikipedia.org/wiki/OpenSearch by falkon, or by the way it sends POST to the search engine.

I had to remove POST data from the search engine configuration, and use GET instead by adding ?q=%s at the end of the URL field. This works.
Comment 6 Côme Chilliet 2020-05-29 20:36:13 UTC
Actually https://searx.antopie.org/opensearch.xml explicitely says GET should be used, not POST, so falkon does something wrong when reading this.
Comment 7 Justin Zobel 2020-10-25 06:38:06 UTC
I've just tested on 3.1.0
Of the default search engines these worked:
DDG
Wikipedia
Google

Startpage does not, it just redirects to their home page, so this will need a fix.

I was able to add and use Qwant and Bing without issue.
Comment 8 Ben Bullard 2023-01-30 01:19:08 UTC
From what I can see in OpenMandriva Falkon is that Duck, duck. go works "correctly" and other search engines do not. StartPage is also included with Falkon in OpenMandriva and is my preference but it is massively irritating to type the same question twice when I use Falkon.
Comment 9 Juraj 2023-11-26 22:13:33 UTC
Git commit f2460c1f8e3090dd6dace4ee6a05fc25116f0878 by Juraj Oravec.
Committed on 26/11/2023 at 23:13.
Pushed by jurajo into branch 'master'.

Fix StartPage search engine default configuration
FIXED-IN: 23.08.4

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    CHANGELOG
M  +3    -4    src/lib/opensearch/searchenginesmanager.cpp

https://invent.kde.org/network/falkon/-/commit/f2460c1f8e3090dd6dace4ee6a05fc25116f0878
Comment 10 Juraj 2023-11-26 22:26:00 UTC
Git commit 00a1b8c1009b638aca1a0d41876a317186420741 by Juraj Oravec.
Committed on 26/11/2023 at 23:25.
Pushed by jurajo into branch 'release/23.08'.

Fix StartPage search engine default configuration
FIXED-IN: 23.08.4

CherryPicked from: f2460c1f8e3090dd6dace4ee6a05fc25116f0878

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    CHANGELOG
M  +3    -4    src/lib/opensearch/searchenginesmanager.cpp

https://invent.kde.org/network/falkon/-/commit/00a1b8c1009b638aca1a0d41876a317186420741