Fix StartPage search engine default configuration

BUG: 419530
FIXED-IN: 23.08.4

CherryPicked from: f2460c1f8e3090dd6dace4ee6a05fc25116f0878

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>